# wglinfo

./: .gitignore  BaseGlContext.cpp  BaseGlContext.h  CMakeLists.txt  EglGlContext.cpp  EglGlContext.h  GlxContext.cpp  GlxContext.h  LICENSE.md  LICENSE.txt  NativeGlContext.cpp  NativeGlContext.h  NativeWindow.cpp  NativeWindow.h  README.md  WasmContext.cpp  WasmContext.h  WasmWindow.cpp  WasmWindow.h  WglContext.cpp  WglContext.h  WntWindow.cpp  WntWindow.h  XwWindow.cpp  wglinfo.cpp  wglinfo.manifest  wglinfo.rc  wglinfo.sln  wglinfo.vcxproj  wglinfo.vcxproj.filters
.github/workflows/: build_wglinfo.yml  build_wglinfo_linux_emsdk.yml  build_wglinfo_linux_gcc.yml  build_wglinfo_linux_mingw.yml  build_wglinfo_macos.yml  build_wglinfo_macos_clang.yml  build_wglinfo_mingw.yml  build_wglinfo_msvc.yml  build_wglinfo_ubuntu.yml  build_wglinfo_wasm.yml  build_wglinfo_windows.yml  build_wglinfo_windows_mingw.yml  build_wglinfo_windows_msvc.yml
libegldummy/: CMakeLists.txt  libEGLdummy.cpp  libGLESv2dummy.cpp
wglinfo/: BaseGlContext.cpp  BaseGlContext.h  BaseWindow.h  CMakeLists.txt  CglContext.h  CglContext.mm  CocoaWindow.h  CocoaWindow.mm  EglGlContext.cpp  EglGlContext.h  GlxContext.cpp  GlxContext.h  NativeGlContext.h  NativeWindow.h  WasmContext.h  WasmWindow.h  WglContext.cpp  WlWindow.cpp  WlWindow.h  WntWindow.h  XwWindow.cpp  XwWindow.h  wglinfo.cpp  wglinfo.rc  wglinfo.rc.in
